tests/baselines/reference/exportAssignmentError.errors.txt
exportEqualsModule_A.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== exportEqualsModule_A.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	export var x;
    }
    
    import M2 = M;
    
    export = M2; // should not error
    